# nlohmann-test

./: CMakeLists.txt  CMakePresets.json  COMMANDES.md  README-short.md  README.md  bugfind1.md  vcpkg.json
apps/: mock_backend.cpp  vision_calibration_check.cpp  vision_replay.cpp  vision_service.cpp
doc/basev1/: 01-perimetre-et-responsabilites.md  02-architecture-cpp-opencv.md  03-pipeline-d-un-tir.md  04-api-locale-et-contrat-json.md  05-validation-et-points-restants.md  README.md  sources-officielles.md
doc/nlhomann/: 01-installation-et-integration.md  02-prise-en-main.md  03-reference-pratique.md  04-fonctions-avancees.md  05-bonnes-pratiques-et-pieges.md  README.md  exemples.cpp  sources-officielles.md
doc/opencv/: 01-installation-et-integration.md  02-prise-en-main.md  03-reference-pratique.md  04-bonnes-pratiques-et-pieges.md  README.md  exemples.cpp  sources-officielles.md
doc/openjson/: 01-harmonie-des-responsabilites.md  02-pipelines-et-serialisation.md  03-bonnes-pratiques.md  README.md  exemples.cpp  sources-officielles.md
fix/: changelog-executif-2026-04-09-110753.md  fix-log-2026-04-09-110454.md
fixtures/: service_config.json
fixtures/ambiguous_contour/: scenario.json
fixtures/double_20/: expected.json  scenario.json
fixtures/inner_bull/: calibration.json  expected.json  scenario.json
fixtures/miss/: scenario.json
fixtures/no_change/: expected.json  scenario.json
fixtures/noise_only/: scenario.json
fixtures/outer_bull/: expected.json  scenario.json
fixtures/single_20/: expected.json  scenario.json
fixtures/triple_20/: expected.json  scenario.json
include/visiondarts/api/: event_publisher.hpp
include/visiondarts/app/: http_service.hpp  offline_engine.hpp  service_controller.hpp
include/visiondarts/core/: board_model.hpp  config.hpp  json_utils.hpp  types.hpp
include/visiondarts/vision/: calibration.hpp  fusion_engine.hpp  impact_detector.hpp  replay.hpp
src/api/: event_publisher.cpp
src/app/: http_service.cpp  offline_engine.cpp  service_controller.cpp
src/core/: board_model.cpp  config.cpp  json_utils.cpp  types.cpp
src/vision/: calibration.cpp  fusion_engine.cpp  impact_detector.cpp  replay.cpp
tests/: test_main.cpp
tools/: build_debug.ps1  generate_fixtures.ps1  run_replay_debug.ps1
